# QDataBase.Project

./: .gitignore  .gitmodules  CMakeLists.txt  setupMySql.sh  setupQuery.sql
QDBLibrary/: CMakeLists.txt  pch.h
QDBLibrary/headers/: QDBLibrary.h  fillable.h  insertable.h  stdafx.h
QDBLibrary/models/: ConsumerTask.h  CustomersTask.h  Employee.h  EmployeePosition.h  EmployeeStatus.h  LegalForm.h  Project.h  ProjectRelatedEmployee.h  ProjectStatus.h  Role.h  TaskStatusConsumer.h  TaskStatusCustomer.h  TaskTypeConsumer.h  TaskTypeCustomer.h  UserData.h
QDBLibrary/src/: QDBLibrary.cpp
QDataBase/: CMakeLists.txt  QEmployee.cpp  TableTemplate.h  dev.cpp  dev.h  main.cpp  stdafx.h  widget.cpp  widget.h  widget.ui
QDataBase/QDBLibrary/: CMakeLists.txt
QDataBase/QDBLibrary/headers/: AllModels.h  QDBLibrary.h
QDataBase/QDBLibrary/models/: ConsumerTask.h  CustomersTask.h  Employee.h  EmployeePosition.h  EmployeeStatus.h  LegalForm.h  Project.h  ProjectRelatedEmployee.h  ProjectStatus.h  Role.h  TaskStatusConsumer.h  TaskStatusCustomer.h  TaskTypeConsumer.h  TaskTypeCustomer.h  UserData.h
QDataBase/QDBLibrary/qmodels/: QEmployeeModel.h
QDataBase/QDBLibrary/src/: QDBLibrary.cpp
QDataBase/headers/: dbconnection.h  dev.h  login.h  loginwindow.h  mainwindow.h  stdafx.h  widget.h  workpie.h
QDataBase/src/: dbconnection.cpp  dev.ui  login.cpp  loginwindow.cpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  widget.cpp  widget.ui  workpie.cpp  workpie.ui
